Desktop version is optimized: uploaded HD images and set media queries. Children FAQ was updated.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-6">
 					<h2>Church</h2>
-					<p>
+					<p class="church-venue-text">
 						<i class="fas fa-church"></i
 						><a
 							href="https://www.google.com/maps/place/Morelia+Cathedral/@19.7024226,-101.194546,17z/data=!4m5!3m4!1s0x842d0e71a95bc4ed:0xaf13bc43e8e69af7!8m2!3d19.7024228!4d-101.1923184"
@@ -234,7 +234,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-6 order-lg-2">
 					<h2>Venue</h2>
-					<p>
+					<p class="church-venue-text">
 						<i class="far fa-building"></i
 						><a
 							href="https://www.casagrandemorelia.com.mx/"
@@ -264,14 +264,14 @@
 		<!-- Hotels -->
 		<div class="container-fluid hotels" id="hotels">
 			<h2 id="hotels-h2">Hotels</h2>
-			<p> We have personally stayed at HERENCIA, Hotel Los Juaninos, and Hotel de La Soledad and fully recommend all three of them.
+			<p class="hotels-text"> We have personally stayed at HERENCIA, Hotel Los Juaninos, and Hotel de La Soledad and fully recommend all three of them.
 			</p>
-			<p>
+			<p class="hotels-text">
 				When you're ready to make your reservation, <strong>we strongly advise that you do not book through third-party travel sites</strong> (e.g. Expedia,
 				Travelocity, Hotels.com, etc). Instead, contact the hotel directly via phone or e-mail. 
 			</p>
 			<div class="row">
-				<div class="col-lg-4 d-flex align-items-stretch">
+				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
 							src="/images/hotels/hotel-mision-catedral.webp"
@@ -307,7 +307,7 @@
 					</div>
 				</div>
 
-				<div class="col-lg-4 d-flex align-items-stretch">
+				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
 							src="/images/hotels/alameda.webp"
@@ -344,7 +344,7 @@
 					</div>
 				</div>
 
-				<div class="col-lg-4 d-flex align-items-stretch">
+				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 					<div class="card" id="hotel-los-juaninos-card">
 						<div class="ribbon">
 							<span>Our top choice</span>
@@ -384,8 +384,8 @@
 						</div>
 					</div>
 				</div>
-
-				<div class="col-lg-4 d-flex align-items-stretch">
+				
+				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
 							src="/images/hotels/herencia.webp"
@@ -423,7 +423,7 @@
 					</div>
 				</div>
 
-				<div class="col-lg-4 d-flex align-items-stretch">
+				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
 							src="/images/hotels/soledad.webp"
@@ -440,7 +440,7 @@
 								~ $130/night USD
 							</p>
 							<p class="card-text">
-								A crown jewel, this is one of the most luxurious accomodations in all of Morelia. Incredible hotel with fantastic architecture.
+								A crown jewel, this is one of the most luxurious accommodations in all of Morelia. Incredible hotel with fantastic architecture.
 							</p>
 							<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-312-1888">+52 (443) 312-1888</a></p>
 							<p><i class="far fa-envelope"></i><a href = "mailto:reservaciones@hsoledad.com">reservaciones@hsoledad.com</p>
@@ -462,7 +462,7 @@
 					</div>
 				</div>
 
-				<div class="col-lg-4 d-flex align-items-stretch">
+				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
 							src="/images/hotels/cantera-diez-hotel-boutique.webp"
@@ -589,8 +589,12 @@
 					<p class="faq-body">
 						<strong>Are children allowed?</strong>
 						<p>
-							Yes, but guests with children under the age of eight are strongly encouraged to take advantage of the nanny service provided by the venue. The cost
-							is $34 USD for 5 hours and one nanny may be assigned up to 6 children.
+							The venue is located on a rooftop terrace and is not suitable for small children. However, we are providing a nanny service free of charge for all of
+							our guests and it covers the duration of the entire reception. This is an accommodation provided by the venue and children ages 2 - 9 will be cared for inside of
+							a playroom adjacent to the terrace. We will have one nanny per six kids and parents will have the opportunity to check-in on their children as they please. 
+
+							<!-- Yes, but guests with children under the age of eight are strongly encouraged to take advantage of the nanny service provided by the venue. The cost
+							is $34 USD for 5 hours and one nanny may be assigned up to 6 children. -->
 						</p>
 					</p>
 
