Fixed hotel card text align issue. Modified wording in FAQ and Travel Information.

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 
 		<!-- Travel Information -->
 		<div class="container-fluid travel-information" id="travel-information">
-			<div class="row align-items-center justify-content-center">
+			<div class="row">
 				<div class="col-xs-12">
 					<h2>Travel Information</h2>
 					<div class="row travel-info-row">
@@ -539,15 +539,14 @@
 						<div class="col-md-10">
 							In order to travel to Mexico, you will need a valid U.S. passport.
 							If you do not have one or if it has expired, please take the
-							necessary steps to obtain or renew your passport. More information
-							can be found on the
+							necessary steps to obtain or renew your passport. Please visit the
 							<a
 								href="https://travel.state.gov/content/travel/en/passports.html"
 								target="_blank"
 								rel="noopener noreferrer"
 							>
 								U.S. Department of State website</a
-							>.
+							> for more information.
 						</div>
 					</div>
 
@@ -591,7 +590,7 @@
 						<p>
 							The venue is located on a rooftop terrace and is not suitable for small children. However, we are providing a nanny service free of charge for all of
 							our guests and it covers the duration of the entire reception. This is an accommodation provided by the venue and children ages 2 - 9 will be cared for inside of
-							a playroom adjacent to the terrace. We will have one nanny per six kids and parents will have the opportunity to check-in on their children as they please. 
+							a playroom adjacent to the terrace. We will have one nanny per six kids and parents will be free to check-in on their children whenever they please. 
 
 							<!-- Yes, but guests with children under the age of eight are strongly encouraged to take advantage of the nanny service provided by the venue. The cost
 							is $34 USD for 5 hours and one nanny may be assigned up to 6 children. -->
