--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
 						<p>
 							The venue is located on a rooftop terrace and is not suitable for small children. However, we are providing a nanny service free of charge for all of
 							our guests and it covers the duration of the entire reception. This is an accommodation provided by the venue and children ages 2 - 9 will be cared for inside of
-							a playroom adjacent to the terrace. We will have one nanny per six kids and parents will be free to check-in on their children whenever they please. 
+							a playroom adjacent to the terrace. We will have one nanny per six kids and parents will be free to check in on their children whenever they please. 
 
 							<!-- Yes, but guests with children under the age of eight are strongly encouraged to take advantage of the nanny service provided by the venue. The cost
 							is $34 USD for 5 hours and one nanny may be assigned up to 6 children. -->
