Changed 'Church' to 'Ceremony'. Modified the text under the Hotels section.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<link rel="stylesheet" href="/css/style.css" />
 		<link rel="stylesheet" href="/css/navigationBar.css" />
 		<link rel="stylesheet" href="/css/jumbotron.css" />
-		<link rel="stylesheet" href="/css/church.css" />
+		<link rel="stylesheet" href="/css/ceremony.css" />
 		<link rel="stylesheet" href="/css/venue.css" />
 		<link rel="stylesheet" href="/css/hotels.css" />
 		<link rel="stylesheet" href="/css/travelInformation.css" />
@@ -69,7 +69,7 @@
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav ml-auto">
 						<a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
-						<a class="nav-link js-scroll-trigger" href="#church">Church</a>
+						<a class="nav-link js-scroll-trigger" href="#church">Ceremony</a>
 						<a class="nav-link js-scroll-trigger" href="#venue">Venue</a>
 						<a class="nav-link js-scroll-trigger" href="#hotels">Hotels</a>
 						<a class="nav-link js-scroll-trigger" href="#travel-information">Travel Information</a>
@@ -141,10 +141,10 @@
 		</div> -->
 
 		<!-- Church -->
-		<div class="container-fluid church" id="church">
+		<div class="container-fluid ceremony" id="ceremony">
 			<div class="row align-items-center">
 				<div class="col-lg-6">
-					<h2>Church</h2>
+					<h2>Ceremony</h2>
 					<p class="church-venue-text">
 						<i class="fas fa-church"></i
 						><a
@@ -267,8 +267,8 @@
 			<p class="hotels-text"> We have personally stayed at HERENCIA, Hotel Los Juaninos, and Hotel de La Soledad and fully recommend all three of them.
 			</p>
 			<p class="hotels-text">
-				When you're ready to make your reservation, <strong>we strongly advise that you do not book through third-party travel sites</strong> (e.g. Expedia,
-				Travelocity, Hotels.com, etc). Instead, contact the hotel directly via phone or e-mail. 
+				If you book through a third-party site (e.g. Expedia, Travelocity, Hotels.com, etc), <strong>we advise that you contact
+				the hotel afterwards to confirm your reservation</strong>.
 			</p>
 			<div class="row">
 				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
@@ -400,7 +400,7 @@
 								~ $60/night USD
 							</p>
 							<p class="card-text">
-								Wonderful hotel that is a bit further from the center but still only a short walk away from the cathedral. Personally, this would be our
+								Wonderful hotel that is a short walk away from the cathedral. Personally, this would be our
 								second choice after Hotel Los Juaninos.
 							</p>
 							<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-232-0246">+52 (443) 232-0246</a></p>
