Modified chuch ID to ceremony in navbar

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav ml-auto">
 						<a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
-						<a class="nav-link js-scroll-trigger" href="#church">Ceremony</a>
+						<a class="nav-link js-scroll-trigger" href="#ceremony">Ceremony</a>
 						<a class="nav-link js-scroll-trigger" href="#venue">Venue</a>
 						<a class="nav-link js-scroll-trigger" href="#hotels">Hotels</a>
 						<a class="nav-link js-scroll-trigger" href="#travel-information">Travel Information</a>
@@ -140,7 +140,7 @@
 			</div>
 		</div> -->
 
-		<!-- Church -->
+		<!-- Ceremony -->
 		<div class="container-fluid ceremony" id="ceremony">
 			<div class="row align-items-center">
 				<div class="col-lg-6">
