Replaced KAYAK svg

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 									target="_blank"
 									rel="noopener noreferrer">
 									<button class="kayak-button">
-										Compare prices on <img src="/images/hotels/KAYAK-white-borders.svg" class="kayak-logo" alt="KAYAK"/>
+										Compare prices on <img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
 							</div>
@@ -370,7 +370,7 @@
 									target="_blank"
 									rel="noopener noreferrer">
 									<button class="kayak-button">
-										Compare prices on <img src="/images/hotels/KAYAK-white-borders.svg" class="kayak-logo" alt="KAYAK"/>
+										Compare prices on <img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
 							</div>							
@@ -429,7 +429,7 @@
 									target="_blank"
 									rel="noopener noreferrer">
 									<button class="kayak-button">
-										Compare prices on <img src="/images/hotels/KAYAK-white-borders.svg" class="kayak-logo" alt="KAYAK"/>
+										Compare prices on <img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
 							</div>
@@ -484,7 +484,7 @@
 									target="_blank"
 									rel="noopener noreferrer">
 									<button class="kayak-button">
-										Compare prices on <img src="/images/hotels/KAYAK-white-borders.svg" class="kayak-logo" alt="KAYAK"/>
+										Compare prices on <img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
 							</div>
@@ -541,7 +541,7 @@
 									target="_blank"
 									rel="noopener noreferrer">
 									<button class="kayak-button">
-										Compare prices on <img src="/images/hotels/KAYAK-white-borders.svg" class="kayak-logo" alt="KAYAK"/>
+										Compare prices on <img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
 							</div>
@@ -598,7 +598,7 @@
 									target="_blank"
 									rel="noopener noreferrer">
 									<button class="kayak-button">
-										Compare prices on <img src="/images/hotels/KAYAK-white-borders.svg" class="kayak-logo" alt="KAYAK"/>
+										Compare prices on <img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
 							</div>
