Added warning message for KAYAK prices

--- a/index.html
+++ b/index.html
@@ -267,8 +267,13 @@
 			<p class="hotels-text"> We have personally stayed at Herencia, Los Juaninos, and Hotel de La Soledad and fully recommend all three of them.
 			</p>
 			<p class="hotels-text">
-				Third-party sites (e.g. Expedia, Travelocity, Hotels.com, etc) are usually much cheaper than booking through the hotels directly. However, If you book through a third-party site, 
-				<strong>we advise that you contact the hotel afterwards to confirm your reservation</strong>.
+				Third-party sites (e.g. Expedia, Travelocity, Hotels.com, etc) are usually cheaper than booking through the hotels directly. However, If you book through a third-party site, 
+				we advise that you contact the hotel afterwards to confirm your reservation.
+				<p class="hotel-warning">
+					<i class="fas fa-exclamation-triangle"></i><strong>Verify your dates when comparing on KAYAK. By default, the range is set for 5 days and 4 nights: Wednesday,
+						7/28 through Sunday, 8/1.
+					</strong>
+				</p>
 			</p>
 			<div class="row">
 				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
