--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 				Third-party sites (e.g. Expedia, Travelocity, Hotels.com, etc) are usually cheaper than booking through the hotels directly. However, If you book through a third-party site, 
 				we advise that you contact the hotel afterwards to confirm your reservation.
 				<p class="hotel-warning">
-					<i class="fas fa-exclamation-triangle"></i><strong>Verify your dates when comparing on KAYAK. By default, the range is set for 5 days and 4 nights: Wednesday,
+					<i class="fas fa-exclamation-triangle"></i><strong>Verify your dates when comparing on KAYAK. By default, the range is set for 5 days and 4 nights — Wednesday,
 						7/28 through Sunday, 8/1.
 					</strong>
 				</p>
