--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 			<p class="hotels-text"> We have personally stayed at Herencia, Los Juaninos, and Hotel de La Soledad and fully recommend all three of them.
 			</p>
 			<p class="hotels-text">
-				Third-party sites (e.g. Expedia, Travelocity, Hotels.com, etc) are usually cheaper than booking through the hotels directly. However, If you book through a third-party site, 
+				Third-party sites (e.g. Expedia, Travelocity, Hotels.com, etc) are usually cheaper than booking through the hotels directly. However, if you book through a third-party site, 
 				we advise that you contact the hotel afterwards to confirm your reservation.
 				<p class="hotel-warning">
 					<i class="fas fa-exclamation-triangle"></i><strong>Verify your dates when comparing on KAYAK. By default, the range is set for 5 days and 4 nights — Wednesday,
