--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		<link rel="stylesheet" href="/css/hotels.css" />
 		<link rel="stylesheet" href="/css/travelInformation.css" />
 		<link rel="stylesheet" href="/css/faq.css" />
+		<!-- <link rel="stylesheet" href="/main.css" /> -->
 
 		<title>Marilynn & Ivan | Our Wedding</title>
 		
@@ -49,7 +50,7 @@
 		<meta name="theme-color" content="#ffffff">
 	</head>
 
-	<body>
+	<body class="langWrap">
 		<!-- Navbar -->
 		<nav class="navbar fixed-top navbar-expand-lg navbar-dark">
 			<div class="container">
@@ -82,7 +83,7 @@
 		<div class="container-fluid flex-master" id="rsvp">
 			<div class="flex-1">
 				<div class="jumbotron-header">
-					<h1 class="jumbotron-h1">Marilynn & Ivan's Wedding</h1>
+					<h1 class="jumbotron-h1 rsvpTitle">Marilynn & Ivan's Wedding</h1>
 					
 					<a
 						href="http://ortizmurowedding.rsvpify.com"
@@ -96,15 +97,18 @@
 							/>RSVP
 						</button>
 					</a>
+						<div>
+							<a href="#" language='english' class="active">English</a>
+							<a href="#" language='spanish'>Español</a>
+						</div>
 				</div>
 			</div>
 
 			<div class="flex-2">
 				<div class="jumbotron-text">
-					<p>
-						Friday, July 30, 2021
-						<br />Morelia, Michoacán
-					</p>
+					<span class="rsvpDate">Friday, July 30, 2021</span>
+					<br>
+					<span>Morelia, Michoacán</span>
 					<p>The deadline to RSVP is Saturday, February 27.</p>
 				</div>
 			</div>
@@ -761,6 +765,8 @@
 		></script>
 
 		<!-- Custom JavaScript -->
+		<script src="/javascript/languageDatabase.js"></script>
+		<script src="/javascript/switchLanguages.js"></script>
 		<script src="javascript/navbarCollapse.js" type="text/javascript"></script>
 		<script src="javascript/popover.js" type="text/javascript"></script>
 	</body>
