Translated the ribbon for Los Juaninos & adjusted the time in FAQ1

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 					<div class="card" id="hotel-los-juaninos-card">
 						<div class="ribbon">
-							<span>Our top choice</span>
+							<span class="hotelLosJuaninosRibbon">Our top choice</span>
 						</div>
 						<img
 							src="/images/hotels/juaninos.webp"
