--- a/index.html
+++ b/index.html
@@ -253,13 +253,13 @@
 		<div class="container-fluid hotels" id="hotels">
 			<h2 class="hotelTitle" id="hotels-h2">Hotels</h2>
 			<p class="hotels-text hotelIntroText1"> We have personally stayed at Herencia, Los Juaninos, and Hotel de La Soledad and fully recommend all three of them. The majority of
-				hotels offer a shuttle service to and from the aiport for a fee. Ask your hotel for more information.
+				hotels offer a shuttle service to and from the airport for a fee. Ask your hotel for more information.
 			</p>
 			<p class="hotels-text hotelIntroText2">
 				Third-party sites (e.g. Expedia, Travelocity, Hotels.com, etc) are usually cheaper than booking through the hotels directly. However, if you book through a third-party site, 
 				we advise that you contact the hotel afterwards to confirm your reservation.
 				<p class="hotel-warning">
-					<i class="fas fa-exclamation-triangle"></i><strong><span class="hotelDateVerification"> Verify your dates when comparing on KAYAK. By default, the range is set for 5 days and 4 nights — Wednesday,7/28 through Sunday, 8/1.</span></strong>
+					<i class="fas fa-exclamation-triangle"></i><strong><span class="hotelDateVerification"> Verify your dates when comparing on KAYAK. By default, the range is set for 5 days and 4 nights — Wednesday, 7/28 through Sunday, 8/1.</span></strong>
 				</p>
 			</p>
 			<div class="row">
