Increased size of 'X' icon in the language notification, added degree symbol in Spanish translation in FAQ, the divider in the nav bar no longer changes color on hover

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		<!-- Change Language Notification -->
 		<div class="animated fadeInDown" id="changeLanguageNotification">
 			<div class="langNotFlex1">
-				<button id="languageButton" onclick="removeLanguageNotification()"><i class="fas fa-times"></i></button>
+				<button id="languageButton" onclick="removeLanguageNotification()"><i class="fas fa-times fa-lg"></i></button>
 			</div>
 			<div class="langNotFlex2">
 				<div>Change the language in the menu</div>
