Updated 'Bring a guest' FAQ

--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
 					<p class="faq-body">
 						<strong><span class="faqQuestion3">Can I bring a guest?</span></strong>
 						<p class="faqAnswer3">
-							Unfortunately, we can only admit those listed on your invitation. There is a strict limit on seating and all of the meals
+							Unfortunately, we can only admit those that are part of your RSVP group. There is a strict limit on seating and all of the meals
 							are accounted for according to the number of guests that RSVP'd. Thank you for your understanding. 
 						</p>
 					</p>
