Changed Venue to Reception

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<div class="navbar-nav">
 						<a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
 						<a class="nav-link js-scroll-trigger navCeremony" href="#ceremony" >Ceremony</a>
-						<a class="nav-link js-scroll-trigger navVenue" href="#venue">Venue</a>
+						<a class="nav-link js-scroll-trigger navVenue" href="#venue">Reception</a>
 						<a class="nav-link js-scroll-trigger navHotels" href="#hotels">Hotels</a>
 						<a class="nav-link js-scroll-trigger navTravelInformation" href="#travel-information">Travel Information</a>
 						<a class="nav-link js-scroll-trigger navFAQ" href="#faqs">FAQs</a>
@@ -221,7 +221,7 @@
 		<div class="container-fluid venue" id="venue">
 			<div class="row align-items-center">
 				<div class="col-lg-6 order-lg-2">
-					<h2 class="venueTitle">Venue</h2>
+					<h2 class="venueTitle">Reception</h2>
 					<p class="church-venue-text">
 						<i class="far fa-building"></i
 						><a
