Added Mexico to the wedding location

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<div class="jumbotron-text">
 					<span class="rsvpDate">Friday, July 30, 2021</span>
 					<br>
-					<span>Morelia, Michoacán</span>
+					<span>Morelia, Michoacán, México</span>
 					<p class="rsvpDeadline">The deadline to RSVP is Sunday, April 25</p>
 				</div>
 			</div>
