Adjusted some of the animations. Removed animation from the Menu.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 				<div class="collapse navbar-collapse"></div> 
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-					<div class="navbar-nav animate__animated animate__fadeInDown">
+					<div class="navbar-nav">
 						<a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
 						<a class="nav-link js-scroll-trigger navCeremony" href="#ceremony" >Ceremony</a>
 						<a class="nav-link js-scroll-trigger navVenue" href="#venue">Reception</a>
@@ -126,8 +126,8 @@
 
 		<!-- Ceremony -->
 		<div class="container-fluid ceremony" id="ceremony">
-			<div class="row align-items-center">
-				<div class="col-lg-6 wow animate__animated animate__fadeInLeft">
+			<div class="row align-items-center wow animate__animated animate__fadeInLeft" data-wow-offset="300">
+				<div class="col-lg-6">
 					<h2 class="ceremonyTitle">Ceremony</h2>
 					<p class="church-venue-text">
 						<i class="fas fa-church"></i
@@ -141,7 +141,7 @@
 					</p>
 				</div>
 
-				<div class="col-lg-6 wow animate__animated animate__fadeInRight">
+				<div class="col-lg-6">
 					<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 						<div class="carousel-inner">
 							<div class="carousel-item active">
@@ -211,8 +211,8 @@
 
 		<!-- Venue -->
 		<div class="container-fluid venue" id="venue">
-			<div class="row align-items-center">
-				<div class="col-lg-6 order-lg-2 wow animate__animated animate__fadeInRight">
+			<div class="row align-items-center  wow animate__animated animate__fadeInRight" data-wow-offset="300">
+				<div class="col-lg-6 order-lg-2">
 					<h2 class="venueTitle">Reception</h2>
 					<p class="church-venue-text">
 						<i class="far fa-building"></i
@@ -226,7 +226,7 @@
 					</p>
 				</div>
 
-				<div class="col-lg-6 order-lg-1 wow animate__animated animate__fadeInLeft">
+				<div class="col-lg-6 order-lg-1">
 					<div class="youtube-container">
 						<iframe
 							class="youtube-video"
