Added a 1s delay to the Language notification

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		</nav>
 
 		<!-- Change Language Notification -->
-		<div class="animate__animated animate__fadeInDown" id="changeLanguageNotification">
+		<div class="animate__animated animate__fadeInDown animate__delay-1s" id="changeLanguageNotification">
 			<div class="langNotFlex1">
 				<button id="languageButton" onclick="removeLanguageNotification()"><i class="fas fa-times fa-lg"></i></button>
 			</div>
